JumpScript/tests/baselines/reference/classAbstractConstructor.errors.txt
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractConstructor.jump(2,5): error TS1242: 'abstract' modifier can only appear on a class, method, or property declaration.


==== tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractConstructor.jump (1 errors) ====
    abstract class A {
        abstract constructor() {}
        ~~~~~~~~
!!! error TS1242: 'abstract' modifier can only appear on a class, method, or property declaration.
    }